<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_gazebo</name>
  <version>2.2.6</version>
  <description>
    Gazebo simulation package for final project using the TurtleBot3
  </description>
  <maintainer email="galleg28@purdue.edu">Steven Gallego</maintainer>
  <license>Apache 2.0</license>
  <author>Joep Tool</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>tf2</depend>
  <depend>numpy</depend>
  <depend>queue</depend>
  <depend>time</depend>
  <depend>matplotlib</depend>
  <depend>heapq</depend>
  <depend>os</depend>
  <depend>yaml</depend>
  <depend>PIL</depend>
  <depend>panda</depend>
  <depend>copy</depend>
  <depend>scipy</depend>
  <depend>cv2</depend>
  <depend>visualization_msgs</depend>
  <depend>ament_index_python</depend>
  


  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
